# ChemistryHTMLPaperParser

./: .gitignore  config.json  process_articles.py  pyproject.toml  requirements.txt
chempp/: article_constr.py  constants.py  paragraph.py
output/articles_processed/: 10.1021&sol;acs.cgd.0c00352.html  10.1021&sol;acs.cgd.5b00791.html  10.1021&sol;acs.chemmater.1c01657.html  10.1021&sol;acs.chemmater.5b03792.html  10.1021&sol;acs.chemmater.6b00443.html  10.1021&sol;acs.chemmater.7b03361.html  10.1021&sol;acs.iecr.7b01420.html  10.1021&sol;acs.iecr.9b00183.html  10.1021&sol;acs.iecr.9b00997.html  10.1021&sol;acs.iecr.9b06765.html  10.1021&sol;acs.inorgchem.0c02229.html  10.1021&sol;acs.inorgchem.0c02965.html  10.1021&sol;acs.inorgchem.1c01245.html  10.1021&sol;acs.inorgchem.2c03145.html  10.1021&sol;acs.inorgchem.2c03275.html  10.1021&sol;acs.inorgchem.9b00550.html  10.1021&sol;acs.inorgchem.9b01205.html  10.1021&sol;acs.inorgchem.9b01887.html  10.1021&sol;acs.jpcc.7b05700.html  10.1021&sol;acs.jpcc.8b01305.html  10.1021&sol;acs.langmuir.5b02907.html  10.1021&sol;acsaenm.2c00079.html  10.1021&sol;acsami.0c20000.html  10.1021&sol;acsami.1c25005.html  10.1021&sol;acsami.2c09917.html  10.1021&sol;acsami.2c13500.html  10.1021&sol;acsami.2c21261.html  10.1021&sol;acsami.3c04225.html  10.1021&sol;acsami.3c06663.html  10.1021&sol;acsami.6b00706.html  10.1021&sol;acsami.8b09739.html  10.1021&sol;acsami.9b07115.html  10.1021&sol;acsami.9b09231.html  10.1021&sol;acsami.9b22410.html  10.1021&sol;acsmaterialslett.3c00096.html  10.1021&sol;acssuschemeng.9b00062.html  (+14 more)
