[tool.poetry]
name = "chempp"
version = "0.1.0"
description = ""
authors = ["soike lab <sukiluvcode@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.2.1"
transformers = ">=4.6.0,<4.7.0"
beautifulsoup4 = ">=4.10.0,<4.11.0"
seqlbtoolkit = ">=0.0.9,<0.1.0"
html5lib = ">=1.1,<2.0"
seqeval = "1.2.2"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
